[package]
name = "viable-impl"
version = "0.1.5"
description = "Interop with C++ MSVC VTables through Rust! If this hasn't been used for a while, you can message me for the name."
authors = ["Vurv78<vurvdevelops@gmail.com>"]
keywords = ["vtable", "cpp", "virtual", "viable"]
categories = ["api-bindings", "external-ffi-bindings", "development-tools::ffi", "accessibility"]
license = "MIT"
repository = "https://github.com/Vurv78/viable"
readme = "../README.md"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[[test]]
name = "tests"
path = "tests/main.rs"

[dependencies]
proc-macro2 = "1.0.36"
quote = "1.0.15"
syn = { version = "1.0.86", features = ["full"] }

[dev-dependencies]
trybuild = { version = "1.0.55", features = ["diff"] }
viable = { path = "../viable" }
