[package]
name = "viable-tests"
version = "0.1.0"
edition = "2021"
build = "build.rs"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
viable = { path = "../viable" }
trybuild = { version = "1.0.55", features = ["diff"] }

[build-dependencies]
cc = "1.0.72"