[package]
name = "viable"
version = "0.1.2"
description = "WIP. If this hasn't been used for a while, you can message me for the name."
authors = ["Vurv78<vurvdevelops@gmail.com>"]
keywords = ["vtable", "cpp", "virtual", "viable"]
categories = ["api-bindings", "external-ffi-bindings", "development-tools::ffi", "accessibility"]
license = "MIT"
repository = "https://github.com/Vurv78/viable"
readme = "../README.md"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["rlib"]

[dependencies]
viable-impl = { version = "0.1", path = "../viable-impl" }